Fixed overflow icon styles

--- a/packages/office-ui-fabric-react/src/components/OverflowSet/OverflowSet.scss
+++ b/packages/office-ui-fabric-react/src/components/OverflowSet/OverflowSet.scss
@@ -10,3 +10,8 @@
 .item {
   flex-shrink: 0;
 }
+
+.overflowIcon {
+  align-self: stretch;
+  height: auto;
+}
